--- a/1_RawDataProcessing/README
+++ b/1_RawDataProcessing/README
@@ -1,2 +1,2 @@
-./CRISPRI contains BASH code to process CRISPRi screen scRNAseq data, available on our GEO
+./CRISPRI contains BASH code to process CRISPRi screen scRNAseq data, available on GEO/SRA :GSE236057.
 ./Herring2022 contains R code to process a brain maturation snRNA-seq dataset from Herring et al. 
