--- a/5_FunctionalAnnotation/README
+++ b/5_FunctionalAnnotation/README
@@ -6,7 +6,9 @@ Scripts in this folder concern the functional annotation of our functional enhan
 
 ./EnhancerTranscription: TTseq and CAGE expression at functional enhancers.
 
-./EnhGenePairs: R scripts considering annotations that relate to the pair of the enhancer and gene itself, rather than either component individually.
+./EnhGenePairs: 
+    EnhGenePairs.R: functional annotations that relate to the pair, rather than either component individually.
+    TF_CytoscapeAstronet.R: construction of the TF-enhancer-gene regulatory network.
 
 ./RegulatedGenes: R scripts that explore what is known about the function and dysregulation of enhancer-regulated genes in astrocytes.
 
